[package]
name = "provided-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"]}
clap = { version = "3.1.12", features = ["derive"]}
futures = "0.3.21"
yahoo_finance_api = { version = "1.2.2"}
async-trait = "0.1.53"
async-std = { version = "1.11.0", features = ["attributes"]}
